# oxcore

./: .gitignore  .mcp.json  Cargo.toml  README.md  config.toml.example  docker-compose.yml  opencode.json
scripts/: PORTING_TRACKER.md
scripts/creatures/: test_defias_thug.lua  test_new_callbacks.lua
scripts/eastern_kingdoms/alterac_mountains/: alterac_mountains.lua
scripts/eastern_kingdoms/arathi_highlands/: arathi_highlands.lua
scripts/eastern_kingdoms/blackrock_depths/: boss_ambassador_flamelash.lua  boss_anubshiah.lua  boss_emperor_dagran_thaurissan.lua  boss_general_angerforge.lua  boss_gerstahn.lua  boss_gorosh.lua  boss_grizzle.lua  boss_magmus.lua  boss_tomb_of_seven.lua
scripts/eastern_kingdoms/blasted_lands/: blasted_lands.lua  boss_kruul.lua
scripts/eastern_kingdoms/burning_steppes/: burning_steppes.lua
scripts/eastern_kingdoms/dun_morogh/: dun_morogh.lua
scripts/eastern_kingdoms/duskwood/: duskwood.lua
scripts/eastern_kingdoms/eastern_plaguelands/: eastern_plaguelands.lua
scripts/eastern_kingdoms/elwynn_forest/: elwynn_forest.lua
scripts/eastern_kingdoms/hillsbrad_foothills/: hillsbrad_foothills.lua
scripts/eastern_kingdoms/hinterlands/: hinterlands.lua
scripts/eastern_kingdoms/loch_modan/: loch_modan.lua
scripts/eastern_kingdoms/redridge_mountains/: redridge_mountains.lua
scripts/eastern_kingdoms/searing_gorge/: searing_gorge.lua
scripts/eastern_kingdoms/silverpine_forest/: silverpine_forest.lua
scripts/eastern_kingdoms/stormwind_city/: stormwind_city.lua
scripts/eastern_kingdoms/stranglethorn_vale/: stranglethorn_vale.lua
scripts/eastern_kingdoms/swamp_of_sorrows/: swamp_of_sorrows.lua
scripts/eastern_kingdoms/tirisfal_glades/: tirisfal_glades.lua
scripts/eastern_kingdoms/undercity/: undercity.lua
scripts/eastern_kingdoms/western_plaguelands/: western_plaguelands.lua
scripts/eastern_kingdoms/westfall/: westfall.lua
scripts/eastern_kingdoms/wetlands/: wetlands.lua
scripts/lib/: constants.lua
scripts/world/: bosses_emerald_dragons.lua
sql/: .gitignore  init-databases.sql  introspect_db.js  package-lock.json  package.json  setup_base_tables.js
sql/migrations/: 20250611150000_auth_add_realmlist_last_seen.sql
src/: lib.rs
src/auth/: config.rs  context.rs  database.rs  init.rs  logging.rs  metrics.rs  mod.rs  server.rs
src/db/: config.rs  db.rs  main.rs
src/shared/: config.rs  mod.rs
src/world/: config.rs  logging.rs  mod.rs  world.rs
tools/: analyze-map-dbc.js  compare-vmaps.js  compare-vmtile.js  validate-vmaps.js
tools/extractor/: .gitignore  Cargo.toml  README.md  VMAP_STATUS.md
tools/extractor/src/: lib.rs  main.rs
tools/extractor/src/cameras/: mod.rs
tools/extractor/src/dbc/: mod.rs
tools/extractor/src/maps/: converter.rs  mod.rs
tools/extractor/src/mmaps/: file_writer.rs  mod.rs  terrain_builder.rs  tile_builder.rs
tools/extractor/src/shared/: config.rs  dbc_parser.rs  libmpq_ffi.rs  mod.rs  mpq.rs
tools/extractor/src/shared/formats/: adt.rs  map_file.rs  mod.rs  wdt.rs
tools/extractor/src/vmaps/: assembly.rs  dir_bin.rs  mod.rs  output.rs  placement.rs  transform.rs  types.rs  vmo_converter.rs
tools/extractor/src/vmaps/m2/: converter.rs  mod.rs  parser.rs  structures.rs
tools/extractor/src/vmaps/tree/: bih.rs  builder.rs  mod.rs  output.rs  structures.rs
tools/extractor/src/vmaps/wmo/: converter.rs  group.rs  mod.rs  parser.rs  root.rs
tools/port-harness/: .env  .gitignore  README.md  package-lock.json  package.json  port-harness.config.ts  port_harness.db  port_harness.db-shm  port_harness.db-wal  tsconfig.json
(+1196 files in other folders)
